--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "chalk": "^5.0.1",
+    "commander": "^9.4.0",
+    "inquirer": "^9.1.0",
     "marked": "^4.0.18",
+    "md-links.angezul22": "^1.0.0",
     "node-fetch": "^2.6.7",
     "path": "^0.12.7"
   }
