--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/index.js",
-    "lint": "eslint src/"
+    "dev": "--exec babel-node src/index.js",
+    "lint": "eslint src/",
+    "test": "jest --coverage "
   },
   "repository": {
     "type": "git",
@@ -31,13 +32,13 @@
     "@babel/preset-env": "^7.18.10",
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.19"
+    "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
     "chalk": "^5.0.1",
     "commander": "^9.4.0",
     "inquirer": "^9.1.0",
+    "jest": "^28.1.3",
     "marked": "^4.0.18",
     "node-fetch": "^2.6.7",
     "path": "^0.12.7"
