--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,16 @@
       "ecmaVersion": "latest",
       "sourceType": "module"
     },
+    "plugins": ["jest"],
     "rules": {
       "linebreak-style": 0,
       "prefer-destructuring": 0,
       "import/extensions": 0,
       "import/prefer-default-export": 0
+      // "jest/no-disabled-tests": "warn",
+      // "jest/no-focused-tests": "error",
+      // "jest/no-identical-title": "error",
+      // "jest/prefer-to-have-length": "warn",
+      // "jest/valid-expect": "error"
     }
 }
