--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "lint": "eslint src/",
     "eslint": "eslint --ext .js src/ test/",
     "test": "jest --coverage "
-
   },
   "repository": {
     "type": "git",
@@ -37,7 +36,8 @@
     "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
-    "chalk": "^5.0.1",
+    "axios": "^0.27.2",
+    "chalk": "^4.1.2",
     "commander": "^9.4.0",
     "inquirer": "^9.1.0",
     "jest": "^28.1.3",
