--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "type": "git",
     "url": "git+https://github.com/lislopezaliaga/LIM018-md-links.git"
   },
+  "publishConfig": {
+    "lislopezaliaga:registry": "https://npm.pkg.github.com"
+  },
   "keywords": [],
   "author": "Lisbeth Lopez",
   "license": "ISC",
